# jsdmp

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
native/: CMakeLists.txt  Cargo.toml  README.md  toolchain.cmake
native/.cargo/: config.toml
native/include/: zydis_wasm.hpp
native/src/: amd64.rs  arm64.rs  lib.rs  main.cpp  protocol.rs
server/: CMakeLists.txt
server/fmt_stub/include/fmt/: base.h  core.h
server/src/: main.cpp  native_cfg_compare.cpp  native_cfg_compare.hpp
web/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
web/public/: web_dmp.wasm
web/src/: WasmDumpDebugger.ts  WasmDumpDebugger.tsx  index.css  index.ts  index.tsx
web/src/components/: CommandView.ts  DisassemblyGraphView.ts  DisassemblyGraphViewPanel.tsx  DisassemblyView.ts  DisassemblyViewPanel.tsx  DockviewDumpLayout.ts  DockviewDumpLayout.tsx  DumpSummary.tsx  ExceptionView.ts  ImperativeDumpViewPanel.tsx  MemoryView.ts  MemoryViewPanel.tsx  ModulesView.ts  SigmaDisassemblyGraphView.ts  SummaryView.ts  ThreadsView.ts  VanillaCommandView.ts  VanillaDisassemblyGraphView.ts  VanillaDisassemblyView.ts  VanillaDumpSummary.ts  VanillaMemoryView.ts  VanillaThreadsView.ts  VirtualListingTable.ts
web/src/lib/: addressHistory.test.ts  addressHistory.ts  addressPanelState.ts  addressSync.ts  addressToolbar.ts  amd64_unwinder.ts  arm64_unwinder.test.ts  arm64_unwinder.ts  cfgGraphologyAdapter.test.ts  cfgGraphologyAdapter.ts  cfgHtml.ts  commandEngine.ts  commandExpr.ts  context.ts  cpu_context.test.ts  cpu_context.ts  debugDisassembly.ts  debugState.ts  debug_interface.test.ts  debug_interface.ts  deterministic-rng.ts  disassembly.test.ts  disassembly.ts  disassemblyGraph.test.ts  disassemblyGraph.ts  dockviewLayout.ts  dumpInfo.ts  dumpSections.ts  e2e.test.ts  fetchRetry.ts  formatting.ts  graph-adapter.test.ts  graph-layout-core-fuzz.test.ts  graph-layout-core.test.ts  graph-layout-core.ts  instructionParser.ts  intelFormatter.test.ts  intelFormatter.ts  minidump.ts  minidump_debug_interface.test.ts  (+17 more)
web/src/lib/__tests__/: addressHistory.test.ts
web/src/lib/analysis/: dfs.test.ts  dfs.ts  dominators.test.ts  dominators.ts  graph.test.ts  graph.ts  layout-fuzz.test.ts  network-simplex.test.ts  network-simplex.ts  phantom-nodes.test.ts  phantom-nodes.ts  sese.test.ts  sese.ts  sugiyama.test.ts  sugiyama.ts  tree-ancestry.test.ts  tree-ancestry.ts  triskel-adapter.test.ts  triskel-adapter.ts  triskel-layout.test.ts  triskel-layout.ts
web/src/lib/commands/: address.ts  disassemble.ts  dps.ts  evaluate.ts  exception.ts  fnent.ts  memory.ts  modules.ts  register.ts  stack.ts  threads.ts
web/src/pages/: wasm-test.tsx
web/src/rendering/: blockTextProgram.ts  cfgBlockOverlay.ts  cfgCanvasLayer.ts  cfgGLContext.ts  cfgGraphRenderer.ts  cfgInteractionHandler.ts  cfgRenderGraph.ts  cfgRenderPipeline.ts  cfgSelectionLayer.ts  edgePolylineProgram.ts  fontAtlas.ts  nodeRectangleProgram.ts  utils..ts
